<resources>
    <string name="app_name">Resto</string>
    <string name="foo">Lorem Ipsum</string>
    <string name="loading">Memuat…</string>
    <string name="title_search">Cari Restoran</string>
    <string name="title_your_location">Lokasi Kamu</string>
    <string name="title_collection">Pilihan Buat Kamu</string>
    <string name="title_collection_description">Jelajahi daftar restoran dan kafe terbaik di</string>
    <string name="title_restaurant">Restoran Terdekat</string>
    <string name="title_restaurant_description">Coba rekomendasi dari kami ya, ini merupakan restoran terdekat</string>
    <string name="title_zero">0</string>
    <string name="title_image_description">Restaurant Images</string>
    <string name="title_failed_load_photo">Gambar gagal dimuat</string>
    <string name="title_failed_load_data">Gagal memuat data!</string>
    <string name="title_failed_get_location">Gagal mendapatkan lokasi terbaru!</string>
    <string name="title_tryagain">Coba Lagi</string>
    <string name="title_sorry_not_alvalabe_collection">Maaf…, Collection saat ini tidak tersedia di daerah kamu</string>
    <string name="title_activity_detail">ScrollingActivity</string>

    <!--  Placeholder Area  -->
    <string name="placeholder_address">%1$s, %2$s</string>
    <string name="placeholder_address_substring">%1$s…, %2$s</string>
    <string name="placeholder_collection">%1$s tempat</string>
    <string name="placeholder_review_count">(%1$s Reviewers)</string>
    <string name="placeholder_restaurant">%1$s %2$s / %3$s Orang</string>
    <string name="placeholder_search">%1$s restoran ditemukan</string>
    <string name="placeholder_search_hint">Cari Restoran di %1$s</string>
    <string name="placeholder_search_hint_welcome">%1$s, Mau makan apa %2$s ini?</string>

    <string name="title_address">Alamat Restoran</string>
    <string name="title_open_hour">Jam Buka</string>
    <string name="title_news_reviews">Review Terbaru</string>
    <string name="title_location">Lokasi</string>
    <string name="title_failed_maps">Tidak ada aplikasi Map!</string>
    <string name="action_settings">Settings</string>
    <string name="title_result_search_tittle">Resto dari pencarianmu</string>
    <string name="title_sample_placeholder_search">0 restoran ditemukan</string>
    <string name="title_morning">Pagi</string>
    <string name="title_evening">Malam</string>
    <string name="title_afternoon">Siang</string>
    <string name="title_good_afternoon">Selamat Siang</string>
    <string name="title_good_evening">Selamat Malam</string>
    <string name="title_good_morning">Selamat Pagi</string>
    <string name="title_language">Bahasa</string>
    <string name="title_settings">Pengaturan</string>
    <string name="title_language_settings">Pengaturan Bahasa</string>
    <string name="title_description_language_settings">Digunakan untuk mengganti bahasa aplikasi</string>
    <string name="title_theme">Pengaturan Tema</string>
    <string name="title_use_theme_device">Gunakan Tema Perangkat</string>
    <string name="title_theme_light">Tema terang</string>
    <string name="title_theme_dark">Tema gelap</string>

</resources>