<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.settings.SettingsActivity"
    tools:showIn="@layout/activity_settings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:fontFamily="@font/semibold"
            android:text="@string/title_language"
            android:textColor="?attr/green"
            android:textSize="@dimen/font_12" />

        <LinearLayout
            android:id="@+id/llLanguage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_16"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:text="@string/title_language_settings"
                android:textColor="?attr/black"
                android:textSize="@dimen/font_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/regular"
                android:text="@string/title_description_language_settings"
                android:textColor="?attr/grey"
                android:textSize="@dimen/font_12" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:layout_marginTop="@dimen/margin_16"
            android:background="@color/line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:fontFamily="@font/semibold"
            android:text="@string/title_theme"
            android:textColor="?attr/green"
            android:textSize="@dimen/font_12" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/scSystem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/title_use_theme_device" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/scLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/title_theme_light" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/scDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_5"
            android:layout_marginEnd="@dimen/margin_16"
            android:text="@string/title_theme_dark" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>