<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:drawableEnd="@drawable/ic_arrow_down"
        android:fontFamily="@font/regular"
        android:gravity="center"
        android:text="@string/title_your_location"
        android:textColor="?attr/grey"
        android:textSize="@dimen/font_12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.ndroid.CoolEditText
        android:id="@+id/etSearch"
        style="@style/searchSmall"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="@dimen/padding_10"
        android:focusable="false"
        android:hint="@string/title_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLocation" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_3"
        android:layout_marginEnd="@dimen/margin_50"
        android:fontFamily="@font/bold"
        android:text="@string/loading"
        android:textColor="?attr/black"
        android:textSize="@dimen/font_18"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_scrollFlags="scroll|enterAlways|snap" />

    <ImageView
        android:id="@+id/ivSettings"
        android:layout_width="@dimen/size_32"
        android:layout_height="@dimen/size_32"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginEnd="@dimen/margin_16"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nsMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etSearch"
        app:layout_scrollFlags="exitUntilCollapsed">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:fontFamily="@font/bold"
                android:text="@string/title_collection"
                android:textColor="?attr/black"
                android:textSize="@dimen/font_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_3"
                android:layout_marginEnd="@dimen/margin_16"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/title_collection_description"
                    android:textSize="@dimen/font_12" />

                <TextView
                    android:id="@+id/tvLocation2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_5"
                    android:fontFamily="@font/regular"
                    android:text="@string/loading"
                    android:textSize="@dimen/font_12" />
            </LinearLayout>

            <include
                layout="@layout/loading_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_15" />

            <TextView
                android:id="@+id/tvCollectionEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_16"
                android:drawableStart="@drawable/ic_sad"
                android:drawablePadding="@dimen/padding_10"
                android:fontFamily="@font/regular"
                android:text="@string/title_sorry_not_alvalabe_collection"
                android:textAlignment="center"
                android:textColor="?attr/black"
                android:visibility="gone" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCollection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:fontFamily="@font/bold"
                android:text="@string/title_restaurant"
                android:textColor="?attr/black"
                android:textSize="@dimen/font_16" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:fontFamily="@font/regular"
                android:text="@string/title_restaurant_description"
                android:textSize="@dimen/font_12" />

            <include
                layout="@layout/loading_restaurant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_16" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvResto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_15"
                android:layout_marginEnd="@dimen/margin_16"
                android:layout_marginBottom="@dimen/margin_150"
                android:nestedScrollingEnabled="false"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>