<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clBase"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.SearchActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginEnd="@dimen/margin_16"
        android:background="@drawable/bg_search_rounded"
        android:paddingStart="@dimen/padding_10"
        android:paddingTop="@dimen/padding_5"
        android:paddingEnd="@dimen/padding_10"
        android:paddingBottom="@dimen/padding_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways|snap">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/size_24"
            android:layout_height="@dimen/size_24"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_back_black" />

        <EditText
            android:id="@+id/etSearch"
            style="@style/searchSmall"
            android:layout_marginStart="@dimen/margin_10"
            android:layout_toEndOf="@+id/ivBack"
            android:hint="@string/title_search"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginEnd="@dimen/margin_16"
                android:fontFamily="@font/bold"
                android:text="@string/title_collection"
                android:textColor="?attr/black"
                android:textSize="@dimen/font_16" />

            <LinearLayout
                android:id="@+id/llLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_3"
                android:layout_marginEnd="@dimen/margin_16"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/regular"
                    android:text="@string/title_collection_description"
                    android:textSize="@dimen/font_12" />

                <TextView
                    android:id="@+id/tvLocation2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_5"
                    android:fontFamily="@font/regular"
                    android:text="@string/loading"
                    android:textSize="@dimen/font_12" />
            </LinearLayout>

            <include
                layout="@layout/loading_collection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_16"
                android:layout_marginTop="@dimen/margin_15" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCollection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_15"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_16"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:fontFamily="@font/bold"
                    android:text="@string/title_result_search_tittle"
                    android:textColor="?attr/black"
                    android:textSize="@dimen/font_16" />

                <TextView
                    android:id="@+id/tvResult"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_16"
                    android:layout_marginTop="@dimen/padding_5"
                    android:layout_marginEnd="@dimen/margin_16"
                    android:fontFamily="@font/regular"
                    android:text="@string/title_sample_placeholder_search"
                    android:textSize="@dimen/font_12" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvResto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/size_120"
                    android:nestedScrollingEnabled="false" />
            </LinearLayout>

            <include
                layout="@layout/loading_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_10" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>