<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/margin_16"
    android:layout_marginTop="@dimen/margin_10"
    android:layout_marginEnd="@dimen/margin_16"
    android:layout_marginBottom="@dimen/margin_10">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvImage"
        android:layout_width="@dimen/size_128"
        android:layout_height="@dimen/size_80"
        app:cardCornerRadius="@dimen/radius_8"
        app:cardElevation="@dimen/elevation_0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="@dimen/size_128"
            android:layout_height="@dimen/size_80"
            android:background="@drawable/placeholder_round"
            android:contentDescription="@string/title_image_description"
            android:scaleType="centerCrop"
            android:src="@drawable/img_no_images" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_14"
        android:fontFamily="@font/bold"
        android:text="@string/foo"
        android:textColor="?attr/black"
        android:textSize="@dimen/font_14"
        app:layout_constraintStart_toEndOf="@+id/cvImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_14"
        android:layout_marginTop="@dimen/margin_5"
        android:fontFamily="@font/regular"
        android:text="@string/foo"
        android:textColor="?attr/grey"
        android:textSize="@dimen/font_12"
        app:layout_constraintStart_toEndOf="@+id/cvImage"
        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <RatingBar
        android:id="@+id/rbRatting"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_14"
        android:layout_marginTop="@dimen/margin_10"
        android:layout_marginEnd="@dimen/margin_10"
        android:isIndicator="true"
        android:max="5"
        android:rating="0"
        android:scaleX="1"
        android:scaleY="1"
        android:transformPivotX="0dp"
        android:transformPivotY="0dp"
        app:layout_constraintStart_toEndOf="@+id/cvImage"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

    <TextView
        android:id="@+id/tvRatting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_10"
        android:layout_marginTop="@dimen/margin_7"
        android:fontFamily="@font/bold"
        android:text="@string/title_zero"
        android:textColor="?attr/black"
        android:textSize="@dimen/font_14"
        app:layout_constraintStart_toEndOf="@+id/rbRatting"
        app:layout_constraintTop_toBottomOf="@+id/tvCategory" />

    <View
        android:id="@+id/view4"
        android:layout_width="@dimen/size_256"
        android:layout_height="@dimen/size_1dp"
        android:layout_marginStart="@dimen/margin_14"
        android:layout_marginTop="@dimen/margin_10"
        android:alpha="0.5"
        android:background="@color/line"
        app:layout_constraintStart_toEndOf="@+id/cvImage"
        app:layout_constraintTop_toBottomOf="@+id/rbRatting" />

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_14"
        android:layout_marginTop="@dimen/margin_10"
        android:drawableStart="@drawable/ic_location"
        android:drawablePadding="@dimen/padding_5"
        android:fontFamily="@font/regular"
        android:text="@string/foo"
        android:textSize="@dimen/font_12"
        app:layout_constraintStart_toEndOf="@+id/cvImage"
        app:layout_constraintTop_toBottomOf="@+id/view4" />
</androidx.constraintlayout.widget.ConstraintLayout>